Project name change

--- a/CDLC/python/api/cdlc_web/cdlc/templates/cdlc/index.html
+++ b/CDLC/python/api/cdlc_web/cdlc/templates/cdlc/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Thetis</title>
+    <title>Jazero</title>
     <style>
       header {
         background-color: #333;
