--- a/CDLC/python/api/jdlc_web/cdlc/templates/jdlc/index.html
+++ b/CDLC/python/api/jdlc_web/cdlc/templates/jdlc/index.html
@@ -49,7 +49,7 @@
     <header>
       <img src="https://bigdataldn.com/wp-content/uploads/2018/05/datalake.png" alt="Thetis logo">
     </header>
-    <form action="/cdlc/result/" method="POST"> {% csrf_token %}
+    <form action="/jdlc/result/" method="POST"> {% csrf_token %}
       <input type="text" placeholder="Query (seperate rows by '#' and row elements by '<>'" id="query" name="query">
       <p>Use embeddings</p>
       <label class="switch">
