--- a/JDLC/python/api/jdlc_web/jdlc/templates/jdlc/index.html
+++ b/JDLC/python/api/jdlc_web/jdlc/templates/jdlc/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <header>
-      <img src="https://bigdataldn.com/wp-content/uploads/2018/05/datalake.png" alt="Thetis logo">
+      <img src="https://bigdataldn.com/wp-content/uploads/2018/05/datalake.png" alt="Jazero logo">
     </header>
     <form action="/jdlc/result/" method="POST"> {% csrf_token %}
       <input type="text" placeholder="Query (seperate rows by '#' and row elements by '<>'" id="query" name="query">
